[gd_scene load_steps=35 format=2]

[ext_resource path="res://scripts/room_instance.gd" type="Script" id=1]
[ext_resource path="res://scripts/rooms/flowerbed.gd" type="Script" id=2]
[ext_resource path="res://assets/rooms/flowerbed.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/flower_timer/0.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/flower_timer/1.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/flower_timer/2.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/flower_timer/3.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/flower_timer/4.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/flower_timer/5.png" type="Texture" id=9]
[ext_resource path="res://assets/ui/flower_timer/6.png" type="Texture" id=10]
[ext_resource path="res://assets/ui/flower_timer/7.png" type="Texture" id=11]
[ext_resource path="res://assets/ui/flower_timer/8.png" type="Texture" id=12]
[ext_resource path="res://assets/ui/flower_timer/9.png" type="Texture" id=13]
[ext_resource path="res://assets/ui/flower_timer/10.png" type="Texture" id=14]
[ext_resource path="res://assets/ui/flower_timer/11.png" type="Texture" id=15]
[ext_resource path="res://assets/ui/flower_timer/12.png" type="Texture" id=16]
[ext_resource path="res://assets/ui/flower_timer/13.png" type="Texture" id=17]
[ext_resource path="res://assets/ui/flower_timer/14.png" type="Texture" id=18]
[ext_resource path="res://assets/ui/flower_timer/15.png" type="Texture" id=19]
[ext_resource path="res://assets/ui/flower_timer/16.png" type="Texture" id=20]
[ext_resource path="res://assets/ui/flower_box3.png" type="Texture" id=21]
[ext_resource path="res://scripts/rooms/flower_box.gd" type="Script" id=22]
[ext_resource path="res://assets/ui/flower_box.png" type="Texture" id=23]
[ext_resource path="res://assets/ui/flower_box2.png" type="Texture" id=24]
[ext_resource path="res://assets/sprites/flowers/0.png" type="Texture" id=25]
[ext_resource path="res://scripts/flower_progress.gd" type="Script" id=26]
[ext_resource path="res://assets/ui/flower_progress0.png" type="Texture" id=27]
[ext_resource path="res://assets/rooms/flowerbed_fg.png" type="Texture" id=28]
[ext_resource path="res://assets/audio/correct.ogg" type="AudioStream" id=29]
[ext_resource path="res://assets/audio/wrong.ogg" type="AudioStream" id=30]
[ext_resource path="res://assets/audio/success.wav" type="AudioStream" id=31]
[ext_resource path="res://assets/audio/failure.wav" type="AudioStream" id=32]

[sub_resource type="Animation" id=1]
resource_name = "New Anim"
length = 1.6
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ]
}

[sub_resource type="Animation" id=2]
length = 1.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 23 ), ExtResource( 24 ), ExtResource( 21 ) ]
}

[node name="room_instance" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1280.0
margin_bottom = -720.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="state_handler" type="Control" parent="."]
script = ExtResource( 2 )
default_music = "The_Garden"

[node name="bg2" type="ColorRect" parent="state_handler"]
margin_right = 1280.0
margin_bottom = 720.0

[node name="bg" type="Sprite" parent="state_handler"]
position = Vector2( 57.748, 187.812 )
texture = ExtResource( 3 )
centered = false
offset = Vector2( -57.748, -156.068 )

[node name="flower_area" type="Control" parent="state_handler"]
margin_left = 1.0
margin_top = 306.0
margin_right = 1281.0
margin_bottom = 579.0
rect_pivot_offset = Vector2( 841.11, 181.261 )

[node name="flower_timer" type="Sprite" parent="state_handler"]
position = Vector2( 95.7066, 127.036 )
texture = ExtResource( 4 )
offset = Vector2( 0.235611, 1.03372 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/flower_timer"]
playback_speed = 0.1
"anims/New Anim" = SubResource( 1 )

[node name="flower_box" type="Sprite" parent="state_handler"]
position = Vector2( 57.748, 187.812 )
texture = ExtResource( 21 )
offset = Vector2( 1050.6, -61.2854 )
script = ExtResource( 22 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="state_handler/flower_box"]
autoplay = "New Anim"
"anims/New Anim" = SubResource( 2 )

[node name="flower_indicator" type="Sprite" parent="state_handler/flower_box"]
position = Vector2( 1015.47, -65.7884 )
texture = ExtResource( 25 )

[node name="flower_progress" type="Control" parent="state_handler"]
margin_left = 635.866
margin_top = 64.2644
margin_right = 933.866
margin_bottom = 104.264
rect_pivot_offset = Vector2( -578.118, 123.548 )
script = ExtResource( 26 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Sprite" parent="state_handler/flower_progress"]
texture = ExtResource( 27 )
centered = false

[node name="2" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 40, 0 )
texture = ExtResource( 27 )
centered = false

[node name="3" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 80, 0 )
texture = ExtResource( 27 )
centered = false

[node name="4" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 120, 0 )
texture = ExtResource( 27 )
centered = false

[node name="5" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 160, 0 )
texture = ExtResource( 27 )
centered = false

[node name="6" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 200, 0 )
texture = ExtResource( 27 )
centered = false

[node name="7" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 240, 0 )
texture = ExtResource( 27 )
centered = false

[node name="8" type="Sprite" parent="state_handler/flower_progress"]
position = Vector2( 280, 0 )
texture = ExtResource( 27 )
centered = false

[node name="flower_sorter" type="YSort" parent="state_handler"]

[node name="fg" type="Sprite" parent="state_handler"]
position = Vector2( 57.748, 723.247 )
texture = ExtResource( 28 )
centered = false
offset = Vector2( -57.748, -156.068 )

[node name="game_timer" type="Timer" parent="state_handler"]
one_shot = true

[node name="indicator_timer" type="Timer" parent="state_handler"]
one_shot = true

[node name="yes" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 29 )
volume_db = 5.0
bus = "SFX"

[node name="no" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 30 )
bus = "SFX"

[node name="success" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 31 )
volume_db = -15.0
bus = "SFX"

[node name="failure" type="AudioStreamPlayer" parent="state_handler"]
stream = ExtResource( 32 )
volume_db = -10.0
bus = "SFX"

[connection signal="timeout" from="state_handler/game_timer" to="state_handler" method="failure"]
[connection signal="timeout" from="state_handler/indicator_timer" to="state_handler" method="reset_indicator"]
